Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109070

[DOCS] QCameraDevice docs refers to missing orientation()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.5.0
    • 6.4.1
    • Documentation, Multimedia
    • None
    • All
    • 3d5637aa6 (tqtc/lts-6.2), 851bfde3d (6.4), e92af1c77 (dev)
    • DaVinci 68

    Description

      The docs

      https://doc.qt.io/qt-6/qcameradevice.html

      have a code-snippet and describing text which refers to QCameraDevice::orientation()

      in the "Detailed Description".

       

      I'd love for that method to exist, but it doesn't.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andreas.eliasson Andreas Eliasson
            tomz Tom Zander
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes