Doc: Remove reference to missing cameraDevice.orientation()

It seems as if this method is not a member of the QCameraDevice class.

Fixes: QTBUG-109070
Change-Id: I1628708c1aabdca238da191d5836d86b4c2072bf
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit e92af1c77bce45f27e54d4b6a3c4db8510659e15)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>