src/multimedia/camera/qcameradevice.cpp
@@ -236,8 +236,7 @@ bool QCameraFormat::operator==(const QCameraFormat &other) const
     \snippet multimedia-snippets/camera.cpp Camera selection
 
     You can also use QCameraDevice to get general information about a camera
-    device such as description, physical position on the system, or camera sensor
-    orientation.
+    device such as description and physical position on the system.
 
     \snippet multimedia-snippets/camera.cpp Camera info
 
